Refactoring: TlsCrawler is now a CrawlerModule